unpackaged/main/default/objects/Taxation_City_by_County__mdt/Taxation_City_by_County__mdt.object-meta.xml
<CustomObject>
    <label>Taxation - Tax Rate</label>
    <pluralLabel>Taxation - Tax Rates</pluralLabel>
</CustomObject>