unpackaged/main/default/objects/Taxation_City_by_County__mdt/fields/County_City__c.field-meta.xml
<CustomField>
    <fullName>County_City__c</fullName>
    <label>County City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>