unpackaged/main/default/objects/Taxation_City_by_County__mdt/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NY</fullName>
                <default>true</default>
                <label>NY</label>
            </value>
            <value>
                <fullName>NJ</fullName>
            </value>
            <value>
                <fullName>CT</fullName>
                <isActive>false</isActive>
                <label>CT</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>